# BubblyChef

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CURRENT_SPRINT.md  GOALS.md  MODEL-OPTIONS-SUMMARY.md  README.md  REORGANIZATION_COMPLETE.md  START_SCRIPTS_IMPROVED.md  package-lock.json  pyproject.toml  start.sh
.claude/: settings.json
.cursor/: .cursorrules
.cursor/prompts/: FEATURE.MD  REFACTOR.MD  START_SPRINT.md
bubbly_chef/: __init__.py  config.py  logger.py  logger_templates.py
bubbly_chef/ai/: __init__.py  gemini.py  manager.py  ollama.py  provider.py
bubbly_chef/api/: __init__.py  app.py  deps.py  middleware.py
bubbly_chef/cli/: __init__.py  chat_cli.py
bubbly_chef/data/: food_library.json
bubbly_chef/domain/: __init__.py  catalog.py  defaults.py  expiry.py  icon_map.py  normalizer.py  pantry_catalog.json
bubbly_chef/models/: __init__.py  base.py  pantry.py  proposals.py  recipe.py  requests.py  user.py
bubbly_chef/repository/: __init__.py  base.py  sqlite.py
bubbly_chef/services/: __init__.py  image_preprocessor.py  ocr.py  receipt_parser.py  recipe_generator.py
bubbly_chef/tools/: __init__.py  expiry.py  llm_client.py  normalizer.py  product_lookup.py
bubbly_chef/workflows/: __init__.py  chat_ingest.py  product_ingest.py  receipt_ingest.py  recipe_ingest.py  state.py
docs/: AGENTOPS.md  README.md  ROADMAP.md  TODO.md  WORKFLOW-QUICKSTART.md  WORKFLOW-VISUAL.md  WORKFLOW.md  claude-code-setup-migration.md
docs/architecture/: langchain-vs-prompt-based.md  overview.md
docs/archive/: README_REFACTOR_COMPLETE.md  flow-change-complete.md  improvements-complete.md  receipt-improvements.md  scan-integration-complete.md  tesseract-setup.md  test-coverage.md
docs/design/: v0-prompts.md
docs/guides/: documentation-checklist.md  logging.md  testing.md
docs/implementations/: hardware-optimized-setup.md  model-options-recipe-generation.md  phase-1c-bugfixes-20260308.md  phase-1c-recipes-implementation.md
docs/plans/: 2026-03-16-pixi-pixel-kitchen-scene.md  2026-03-17-food-item-database-research.md  2026-03-17-food-sprites-icons-research.md  2026-03-17-kitchen-art-guide.md  2026-03-17-kitchen-phase-plan.md  2026-03-17-logging-audit.md  2026-03-17-logging-quick-reference.md  2026-03-17-logging-summary.txt  2026-03-17-pixel-art-image-generation-research.md  2026-03-18-qa-api-docs-gaps.md  2026-03-18-qa-api-endpoint-testing.md  2026-03-18-qa-critical-bugs.md  2026-03-18-qa-data-quality.md  2026-03-18-qa-ux-issues.md  (+9 more)
scripts/: build_catalog.py  build_food_library.py  demo_logging.py  dev-agent.sh  dev.sh  download_fluent_emoji.py  new-sprint.sh  qa-agent.sh  start-backend.sh  start-frontend.sh  test_scan.sh
tests/: README_TESTS.md  __init__.py  conftest.py  test_chat_router.py  test_chat_workflow.py  test_helpers.py  test_logger.py  test_user_flows.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+73 files in other folders)
