[project]
name = "bubbly-chef"
version = "0.1.0"
description = "AI-first agentic workflow service for pantry and recipe management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.3",
    "python-multipart>=0.0.6",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "respx>=0.20.0",
    "hypothesis>=6.90.0",
    "faker>=22.0.0",
]
cli = [
    "rich>=13.0.0",
]

[project.scripts]
bubbly-chat = "bubbly_chef.cli.chat_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["bubbly_chef/logger_templates.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
source = ["bubbly_chef"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli/*",
    "*/logger_templates.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
